objects/MC4SF__MC_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Account_Name__c</fullName>
        <formula>CreatedBy.Email</formula>
        <label>Campaign Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>MC Campaigns</relationshipLabel>
        <relationshipName>MC_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Queue_Name__c</fullName>
        <label>Campaign Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>